[package]
name = "rs-arr2proto"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[lib]
crate-type = [
    "lib",
    "cdylib",
]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 8

[dependencies.prost]
version = "0.12"
default-features = false
features = [
]

[dependencies.prost-types]
version = "0.12"
default-features = false
features = [
]

[build-dependencies.prost-build]
version = "0.12"
default-features = false
features = [
    "format",
]

[features]
defaults = [
    "float64",
]

float64 = []
